# ChangeLog for sys-boot/yaboot
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/yaboot/ChangeLog,v 1.47 2015/05/17 04:16:27 vapier Exp $

  17 May 2015; Mike Frysinger <vapier@gentoo.org> yaboot-1.3.14-r2.ebuild,
  yaboot-1.3.16.ebuild, yaboot-1.3.17-r2.ebuild:
  Drop hardcoded -I/usr/include which breaks cross-compiles and is not needed
  for native builds.

  17 May 2015; Mike Frysinger <vapier@gentoo.org> yaboot-1.3.14-r2.ebuild,
  yaboot-1.3.16.ebuild, yaboot-1.3.17-r2.ebuild:
  Remove legacy CC setup -- always use tc-getCC.  Also make sure we respect LD.

  17 May 2015; Mike Frysinger <vapier@gentoo.org> -yaboot-1.3.17-r1.ebuild,
  -yaboot-1.3.17.ebuild, yaboot-1.3.14-r2.ebuild, yaboot-1.3.16.ebuild,
  yaboot-1.3.17-r2.ebuild:
  Switch `export -n` to `unset`, and also clear CPPFLAGS & LDFLAGS.

  20 Jun 2012; Joseph Jezak <josejx@gentoo.org> yaboot-1.3.17-r2.ebuild,
  files/yaboot-stubfuncs.patch:
  Added more stub functions for newer e2fsprogs, marked stable.

  15 May 2012; Joseph Jezak <josejx@gentoo.org> yaboot-1.3.17-r1.ebuild:
  Marked ppc stable quickly to fix build problems in the stable tree.

*yaboot-1.3.17-r2 (12 May 2012)

  12 May 2012; Joseph Jezak <josejx@gentoo.org> +yaboot-1.3.17-r2.ebuild,
  +files/new-ofpath-devspec.patch:
  Add patch to fix devspec location.

  05 May 2012; Joseph Jezak <josejx@gentoo.org> files/yaboot-stubfuncs.patch:
  Update the stub functions to work with e2fsprogs-1.42.0.

  02 May 2012; Joseph Jezak <josejx@gentoo.org> yaboot-1.3.17-r1.ebuild:
  Change to EAPI-2, move the patching to src_prepare, add e2fsprogs static-libs
  use dep.

*yaboot-1.3.17-r1 (02 May 2012)

  02 May 2012; Joseph Jezak <josejx@gentoo.org> +yaboot-1.3.17-r1.ebuild,
  +files/yaboot-stubfuncs.patch:
  Added stubbed function patch to fix building with e2fsprogs-1.42.

*yaboot-1.3.17 (24 Feb 2012)

  24 Feb 2012; Joseph Jezak <josejx@gentoo.org> +yaboot-1.3.17.ebuild,