@@ -14,25 +14,25 @@ AUX yabootconfig-1.3.13.patch 1655 SHA256 ee662c068ba7800d1d0c85a927f3990658cc48
 DIST yaboot-1.3.14.tar.gz 219089 SHA256 b1b0ddc798e332dc03065bac871b05f700b6f8383951a05dee68a7438f644933 SHA512 7542073159a15787e27fd8246fe4c84c48cec5cc6fe76be06f4591bb9ca459ad0c81f0085f08d944745a186da005a5ace0d3d0b2598711ca3309fad1c5a00e74 WHIRLPOOL 5eb364684b5628ea241719f2ac8c18ef2ee3daa7355da91fc69992187c01b1decce95144eb0d7cbd3a481124a3ff81880261b8e5e5aedf6f87499c3c3c95940c
 DIST yaboot-1.3.16.tar.gz 220360 SHA256 16635d5ed0298d46e26e1da8f7a793e185ddb796e3e567554869676650a44650 SHA512 9cd98335c8b32787567253e628549fe88af5ebe4b81fb6b99741fbbcc0ae3b44dc4fdad527ed27da00103bc0482d9a33d3f128f542884387f5aa754546624e14 WHIRLPOOL 5cd42ff0c041135c53cdd852ca227aba75e154cd557fdc6a740218982f5033da6f4428bda5934b6227dd726f31d2d97e2c37d3706076ecad77969678fe7c8eb4
 DIST yaboot-1.3.17.tar.gz 224325 SHA256 2fb738d8fd48b94ab2534a4fdf63738ad02c1a30f4b2add91f837baff8fa2aa1 SHA512 da910c4c6ca2de817342bf4dbcefe2857606043e614782581a86bae206cf6cfe5597ad47aea15369feb60e02d8a4f9f4aa3b12863d715c757584c1f4d7ffb9de WHIRLPOOL 8440faadd955aae0484a2d05c4b712d40b9f438224bbf26b2cf9e178944a007aeac779ae7a9ef2431f2404b24440930d34a63b36f46d8c58d4b7ce98af5c92bc
-EBUILD yaboot-1.3.14-r2.ebuild 1388 SHA256 7cfc954a74f66814a3b432b6a002aefa47570c0665dbda2fc4e4ba95d23201d5 SHA512 4e8a1e46de371da003a42e4b60945b7c7675db6b1b76ce2c8fda64d1fd6a211e690b96dc811e146f8a984caef11ef02d54cef6949643dae19a84c0c0eb2714e7 WHIRLPOOL a6074cbd21320b5f5d67227b8f21236f2f535a1f41bfe899ccd0939ca640b9c93a79a9b0969c3e386f6d00cd9d418ac26bb0cda50cd909b818690a65cacb9e07
-EBUILD yaboot-1.3.16.ebuild 1457 SHA256 241be84e77dd290cd712bbe588741b99cf269a94290a76cf0153c5ab116103c4 SHA512 779597cb82c87e27e7a40320dd74be11607e41d31237984495e0821c7d7971abde7f76571938768da988604f57e4f38d1c418b3206d2eb942678605aa0c70dd7 WHIRLPOOL 12c8011868476fbd786f2ddf331c94ec7ea69159d40f6bc06db15924fce7998942269d26200bde662e24b06439b5895fbfce7eab3599d360c3b4a3bb72739e0e
-EBUILD yaboot-1.3.17-r2.ebuild 1756 SHA256 2331a0a84dc333a70d9454bae14abb0b910537b69a680c33473e728d8c5a41f1 SHA512 91de1bad1adbb985c9eaed5afd154d6dfc66388eacc2b2ea043895a699dbc45e952d812e412fc08f0e6878d0c66f4f905dd8e8f69f76ed4d78e395e780eda656 WHIRLPOOL 03b42e0ff299cc4f59d7a9db3fbc1b979abc6642357a216447fc977530ecb8d2052359a763cc0fcdf02a6c45c1cdd4b843821440678330d7fb19e4529add93f5
-MISC ChangeLog 11617 SHA256 b64d4fd42e6e29ff6f3bcb15aff9bb04a3a5c691a45992d9edf9701836d5f832 SHA512 a84f959f92f8fa37a4c7b15c7c824a41abba34d5d32f7e5822cac684b6c4cf9b1881ce7935ec864ca17d09d7829d73572a8f1643e42723119d0fbc0437016613 WHIRLPOOL 6dbc8f2af10ed50c1b119a70c6b937ca795a952fb909ac501647dab4d9af5929b279909a50ab8a42b9ecc309586d1ebce56bf6115a81b03e82a8eff913bf6ae5
+EBUILD yaboot-1.3.14-r2.ebuild 1410 SHA256 ec893adc528ac70972851a84e764946d7b58ee0f2f5be97ac2bbdb0aadd0ee39 SHA512 0c83f7b6d946d1049cef89bdfab22133db6f6573f67167b5f1795ad4d2f17383a65cf23e5171b302f4aee2e8bdbc34f64b547fb4d4f179e5cc9a728e4bb4d444 WHIRLPOOL 80ea94d38278210eeac937e62170541e7ab61b60d98b2d319cbcfddcfda4f39ad0955cec09d6b5974e2c961283ec9a823cf2590527135df24e7eca885ca663ad
+EBUILD yaboot-1.3.16.ebuild 1479 SHA256 e9539bd38c65fb796bbfe5cc2b65da690416aef04a65fb5c253eb8d20afb4d95 SHA512 111cd34db8cc48cfbb9126ce82977ca4ad9db069f01f772fbd057850be23d60bad13663ae8a9c925bbd4f4ac31f5c22ba4f3e48bf142e53fc96cfeac9c9b8ea6 WHIRLPOOL 26d742a4f355bcc18717f0b331c18f9113c235f518da82117cfd861ef2a0a970ae23762691cf4568ebcfaffdf945c9f8d00bedf268452bd9366b5dc680a243a8
+EBUILD yaboot-1.3.17-r2.ebuild 1777 SHA256 2a5dc88691594b80753c283b396fabe41c96415c62dec495ddea4db1826cd51c SHA512 83c397310cf1db9954999c684be3307377a77f93a63d89713cbeedd04b8e5df94ec36c7fc7c8da303faac3187ffac60bda502f01cf5460a4f365a92d58226d7f WHIRLPOOL ce32dd835aeb6bef640de27258ef9f47bbf176a3c963e263af56c3cb57ebf0a7faa5bfea9a348161be215f5ffe850167ca9f2482a0c47f742db1fb3fcc20864e
+MISC ChangeLog 11810 SHA256 8d1a57e4dcf5b6b6d1cc4d38257d1173e65ce45c28c4d2fcb6ce14a87c724b59 SHA512 8d619d2e26cd64332e49ee2927a879e3f35b92b9fa9bd6be18c23e8453b39a090e5322e1f9ba0564051c5ffdbefc8b26eb1a5a0bd2cf36ffd19ab824eaebb0d8 WHIRLPOOL b9ac6c40cdeafc9cd90aa894a60e266a5ca65f10a3d7f3d261e9adfefc32d1be4e028bed6371fb12a3944f0677ce99193439cf79f44fb8a7cddf52583a44412f
 MISC metadata.xml 175 SHA256 123ecdec2aa3d066ff52ce8a8013191ede4c949290dad2afc2a2c505500e765a SHA512 9933194f53703c4f34f6b7145e9236acfa60669c9a036c2c9da309f1adec5f4addf508040b7be6b935dfc36ed652dd3b2cefc5e48bc48f0e01c9def0022ca7e2 WHIRLPOOL edb132936f3b6adc3944344b9e2b57de7a126febbc799869e3838933eebd307d02c99f3466aeaf2ebe7d3fd4c9cab66c56fbff0e8b02734314c20926b4a11e46
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVWBYcAAoJEPGu1DbS6WIAfFgP/0pOwdGS40M2oMwpZKOaLwov
-quEoqxRD9Ry7a42eEGMBN/Xv2F8ol4p8OfCLe5LdtTOP6+1Q2/lecC74TjdxDDy7
-Q7ao1aK/VX8oQWOuqPCoA0dwi6155JStI5z3jNICCsKi0F8A7YR8pMXhApNgAssa
-IY3b7ILnFbtvjJonISE86i+bRh17VDkqU9s6Z+GdmD6uf/f/MuXDVfjwetrgVTKj
-s8toDd/wa3Z9KGUv4VCY9/fMwr5OL2uM5oYsci/Q/fagboJmv2z5mB/FmKEdgDc7
-QbVzPclvu1MngdzNQmmyVZ6DKVw5BtFcsOeir1ZH4M7mIWiWe+7WlLul6XdblF9A
-hCNIwUD9IQUnFzCPezcOQ3aMufhydE8+gWZIyedrDNJ7JP7YkQzuusc4blo949R8
-cLJMBuU+lwJhuXiGlKWgHRh8RBumBDuSXbcl2In3+H32cjYIPH3fhGLw8AE4QJm+
-2VKDeYt74+711/kYWO4M6HF103DH46VU8s+9KnYzjtNWqcg0kzv+huhjtc4Z3SD9
-i+a9TRkIJJKbydoxBqezZ9I0e4HC1N/klBoI4CRkMCL3xEivsLKF4PdubwxSxbnF
-Cd2hreEiYsIfRLK8JuKrNbuFSDdZ3mubZ+7Ryv/L1Dsga8Uw/xdkgD+FoTjpYIb1
-Ix469XV/gGL3kQn6mXU9
-=XuSJ
+iQIcBAEBCAAGBQJVWBaNAAoJEPGu1DbS6WIAhX8P/ixDYo4tQezarmJv2ns3Jw57
+4nOtZIPOTeRdXYVzQSqCeJIPaI0avZISO/Hehhwg7Gj9OhaWJHgJlwr8Eg4K8/ve
++K/mKFmL8odagdjiYcQ770NOQL9rS2R97hMhmi7TaoK1TPDKZnoy0MtN4sNSd1EQ
+T9JEwqqobVElH7NAkXjWeaYIgVH1/85hPJWi0951z0HYmw1UAfJF+mYvY1nm6pG0
+mgTWg6PoeWS9ph7hVyuJQaiuY+v095t1GyjGl9JtGAWkcO7rfT2YKaMx6ptMqQNR
+7/+hgf0J8ic2btGsw8w3Rt8H92kxeDwMl2triWPv7xIbHfI4kFhAkzbaCDfbqeth
+/eqDChZKcTgmr8PvGbAUfUlVusmopuVIRL7e7552pNc8sbXB9/0CoB10We72yMdd
+j15ZNgQ8ghpmTTUO0Ntn1KtwYVB4HMhSKLNtefdDbXECUny83E7YUD3QyBQSH/x6
+MObnL+wgUjF8uV+gZtKBFxAvIhgyYRchlGZQbNUJBWPb3TZzRIj0qRgdBOGN7HZm
+ySy+akEeaAZ0EtVjD56B0Puh1qopiKaqSVhANVjEa7V7q7wf3CgbXBnbcPNIOJeP
+a2tg3rh1R9tPQmtvCIa6xKOpaLOPCTg0wGfvCOPGe9vHS3mQ7uag4Lw6HJfEWKkR
+8rfYJ/KfMaJeuavaxTDe
+=Dxx6
 -----END PGP SIGNATURE-----
