@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/yaboot/yaboot-1.3.17-r2.ebuild,v 1.5 2015/05/17 04:16:27 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/yaboot/yaboot-1.3.17-r2.ebuild,v 1.6 2015/05/17 04:18:20 vapier Exp $
 
 EAPI=2
 
@@ -15,10 +15,13 @@ KEYWORDS="-* ppc -ppc64"
 IUSE="ibm"
 
 DEPEND="sys-apps/powerpc-utils
-		sys-fs/e2fsprogs[static-libs]"
-RDEPEND="!ibm? ( sys-fs/hfsutils
-				 sys-fs/hfsplusutils
-				 sys-fs/mac-fdisk )"
+	sys-fs/e2fsprogs[static-libs]"
+RDEPEND="!sys-boot/yaboot-static
+	!ibm? (
+		sys-fs/hfsutils
+		sys-fs/hfsplusutils
+		sys-fs/mac-fdisk
+	)"
 
 src_unpack() {
 	unpack ${A}
