@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/yaboot
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/yaboot/ChangeLog,v 1.47 2015/05/17 04:16:27 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/yaboot/ChangeLog,v 1.48 2015/05/17 04:18:20 vapier Exp $
+
+  17 May 2015; Mike Frysinger <vapier@gentoo.org> yaboot-1.3.14-r2.ebuild,
+  yaboot-1.3.16.ebuild, yaboot-1.3.17-r2.ebuild:
+  Block yaboot-static at runtime since it is now keyworded for ppc.
 
   17 May 2015; Mike Frysinger <vapier@gentoo.org> yaboot-1.3.14-r2.ebuild,
   yaboot-1.3.16.ebuild, yaboot-1.3.17-r2.ebuild:
